--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 	<body>
 		<div class="kader2">
 			<h3>Blog - Site</h3>
-			<p>Op deze website kan je alles terugvinden over mij Rosiers Naomi en alle werken die ik gemaakt heb, met bezig ben of projecten die ik nog ga realiseren!<br><br>
-			Je kan er onder andere mij ook contacteren, me vinden op alle sociale netwerken, over me lezen, mijn blog bekijken, etc.</p>
+			<p>Hier kan je van alles lezen over waar de site over gaat!<br>
+				Deze website gaat over Rosiers Naomi (ik dus) en hier op deze site kan je me contacteren on de link ‘Contact’ daar kan je eveneens ook alles vinden op welke sociale media ik actief ben.<br>
+				Onder de link ‘About’ kan je alles over me lezen wat ik interessant vind, wat mij hobby’s zijn en wat ik allemaal doe.<br>
+				Je kan hier ook bekijken waar ik allemaal met bezig ben onder de link ‘Portfolio’, daar zal ik dingen posten die ik heb gemaakt of waar ik aan bezig ben.<br>
+				</p>
 			<a href="Links/Home.html">Naar de Blog - Site! -></a>
 			</div>
 
