--- a/Links/About.html
+++ b/Links/About.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Blog - Rosiers Naomi</title>
+		<title>Site - Rosiers Naomi</title>
 		<link rel="stylesheet" type="text/css" href="reset.css">
 		<link rel="stylesheet" type="text/css" href="About.css">
 		<meta charset="utf-8">
@@ -15,7 +15,7 @@
 			<ul>
 			<li ><a href="Home.html" class="link1"><img src="Afbeeldingen/Huisje1.png" width="20px" class="huis1"><img src="Afbeeldingen/Huisje2.png" width="20px" class="onzichtbaar huis2"> Home</a></li>
 
-			<li><a href="Blog.html" class="link2"><img src="Afbeeldingen/Blog1.png" width="20px" class="blog1"><img src="Afbeeldingen/Blog2.png" width="20px" class="onzichtbaar blog2"> Blog</a></li>
+			<li><a href="Blog.html" class="link2"><img src="Afbeeldingen/Blog1.png" width="20px" class="blog1"><img src="Afbeeldingen/Blog2.png" width="20px" class="onzichtbaar blog2"> Portfolio</a></li>
 
 			<li><a href="Contact.html" class="link3"><img src="Afbeeldingen/Contact1.png" width="20px" class="con1"><img src="Afbeeldingen/Contact2.png" width="20px" class="onzichtbaar con2"> Contact</a></li>
 			<li><span class="bloggie"><img src="Afbeeldingen/About2.png" width="20px"> About</span></li>
@@ -23,19 +23,19 @@
 		</div>
 
 		<div class="popup1 onzichtbaar">
-			<p>Naar de Homepage waar je vanalles van informatie kan vinden over deze Blog - Site dinges etc.</p>
+			<p>Naar de Homepage pagina, waar je vanalles van informatie kunt vinden over deze website en meer!</p>
 		</div>
 
 		<div class="popup2 onzichtbaar">
-			<p>Naar de Blog pagina, waar je alle blogs kan lezen over de dingens die ik nog moet posten :3</p>
+			<p>Naar de Portfolio pagina, waar je alles kan lezen en bekijken over wat ik allemaal heb gedaan en wat ik nog ga doen!</p>
 		</div>
 
 		<div class="popup3 onzichtbaar">
-			<p>Naar de Contact pagina, waar je me lekker kan contacten met vanalles en nog wat. A.U.B. geen spam >.></p>
+			<p>Naar de Contact pagina, waar je mij een e-mail kunt sturen, me kunt volgen op sociale media en meer!</p>
 		</div>
 
 		<header>
-    	<h1>Blog - Rosiers Naomi</h1>
+    	<h1>Site - Rosiers Naomi</h1>
     	</header>
 
 		<div class="kader2">
@@ -47,9 +47,9 @@
 
 				Ik schrijf ook een eigen verhaal in mijn vrije tijd en soms doe ik nog aan schilderen maar in mindere maten want ik heb geen plek om alle doeken nog ergens te leggen.<br><br>
 
-				Ik luister ook elke dag muziek ik ben gek op bands zoals Linkin Park, Three Days Grace, Breaking Benjamin, Papa Roach, Hollywood Undead, Starset, Fall Out Boy, Panic At The Disco!, Eminem, A Little faster, PSY, Hans Zimmer, 65Daysofstatic, etc.<br><br>
+				Ik luister ook elke dag muziek ik ben gek op bands zoals Linkin Park, Three Days Grace, Breaking Benjamin, Papa Roach, Hollywood Undead, Starset, Fall Out Boy, Panic At The Disco!, Eminem, A Little Faster, PSY, Hans Zimmer, 65Daysofstatic, etc.<br><br>
 
-				Ook speel ik vaak games, ik was vroeger een enorme PC gamer maar sidns mijn game laptop kapot is heb ik een PlayStation 3 aangeschaft en speel ik veel Grand Theft Auto 5 en Skyrim.
+				Ook speel ik vaak games, ik was vroeger een enorme PC gamer maar sinds mijn game laptop kapot is heb ik een PlayStation 3 aangeschaft en speel ik veel Grand Theft Auto 5 en Skyrim.
 				</p>
 			</div>
 
