--- a/Links/Contact.html
+++ b/Links/Contact.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Blog - Rosiers Naomi</title>
+		<title>Site - Rosiers Naomi</title>
 		<link rel="stylesheet" type="text/css" href="reset.css">
 		<link rel="stylesheet" type="text/css" href="Contact.css">
 		<meta charset="utf-8">
@@ -15,26 +15,26 @@
 			<ul>
 			<li ><a href="Home.html" class="link1"><img src="Afbeeldingen/Huisje1.png" width="20px" class="huis1"><img src="Afbeeldingen/Huisje2.png" width="20px" class="onzichtbaar huis2"> Home</a></li>
 
-			<li><a href="Blog.html" class="link2"><img src="Afbeeldingen/Blog1.png" width="20px" class="blog1"><img src="Afbeeldingen/Blog2.png" width="20px" class="onzichtbaar blog2"> Blog</a></li>
+			<li><a href="Blog.html" class="link2"><img src="Afbeeldingen/Blog1.png" width="20px" class="blog1"><img src="Afbeeldingen/Blog2.png" width="20px" class="onzichtbaar blog2"> Portfolio</a></li>
 			<li><span class="bloggie"><img src="Afbeeldingen/Contact2.png" width="20px"> Contact</span></li>
 			<li><a href="About.html" class="link4"><img src="Afbeeldingen/About1.png" width="20px" class="ab1"><img src="Afbeeldingen/About2.png" width="20px" class="onzichtbaar ab2"> About</a></li>
 		</ul>
 		</div>
 
 		<div class="popup1 onzichtbaar">
-			<p>Naar de Homepage waar je vanalles van informatie kan vinden over deze Blog - Site dinges etc.</p>
+			<p>Naar de Homepage pagina, waar je vanalles van informatie kunt vinden over deze website en meer!</p>
 		</div>
 
 		<div class="popup2 onzichtbaar">
-			<p>Naar de Blog pagina, waar je alle blogs kan lezen over de dingens die ik nog moet posten :3</p>
+			<p>Naar de Portfolio pagina, waar je alles kan lezen en bekijken over wat ik allemaal heb gedaan en wat ik nog ga doen!</p>
 		</div>
 
 		<div class="popup4 onzichtbaar">
-			<p>About, alles over mij. Ni interresant maja :D</p>
+			<p>Naar de About pagina, waar je alles kunt lezen over mij. Wat ik graag doe, wat is lees, wat ik game en meer!</p>
 		</div>
 
 		<header>
-    	<h1>Blog - Rosiers Naomi</h1>
+    	<h1>Site - Rosiers Naomi</h1>
     	</header>
 
 		<div class="kader2">
