--- a/Links/Home.html
+++ b/Links/Home.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Blog - Rosiers Naomi</title>
+		<title>Site - Rosiers Naomi</title>
 		<link rel="stylesheet" type="text/css" href="reset.css">
 		<link rel="stylesheet" type="text/css" href="Home.css">
 		<meta charset="utf-8">
@@ -14,64 +14,58 @@
 			<h2>Links</h2>
 			<ul>
 			<li ><span class="bloggie"><img src="Afbeeldingen/Huisje2.png" width="20px"> Home</span></li>
-			<li><a href="Blog.html" class="link2"><img src="Afbeeldingen/Blog1.png" width="20px" class="blog1"><img src="Afbeeldingen/Blog2.png" width="20px" class="onzichtbaar blog2"> Blog</a></li>
+			<li><a href="Blog.html" class="link2"><img src="Afbeeldingen/Blog1.png" width="20px" class="blog1"><img src="Afbeeldingen/Blog2.png" width="20px" class="onzichtbaar blog2"> Portfolio</a></li>
 			<li><a href="Contact.html" class="link3"><img src="Afbeeldingen/Contact1.png" width="20px" class="con1"><img src="Afbeeldingen/Contact2.png" width="20px" class="onzichtbaar con2"> Contact</a></li>
 			<li><a href="About.html" class="link4"><img src="Afbeeldingen/About1.png" width="20px" class="ab1"><img src="Afbeeldingen/About2.png" width="20px" class="onzichtbaar ab2"> About</a></li>
 		</ul>
 		</div>
 		<div class="popup2 onzichtbaar">
-			<p>Naar de Blog pagina, waar je alle blogs kan lezen over de dingens die ik nog moet posten :3</p>
+			<p>Naar de Portfolio pagina, waar je alles kan lezen en bekijken over wat ik allemaal heb gedaan en wat ik nog ga doen!</p>
 		</div>
 
 		<div class="popup3 onzichtbaar">
-			<p>Naar de Contact pagina, waar je me lekker kan contacten met vanalles en nog wat. A.U.B. geen spam >.></p>
+			<p>Naar de Contact pagina, waar je mij een e-mail kunt sturen, me kunt volgen op sociale media en meer!</p>
 		</div>
 		<div class="popup4 onzichtbaar">
-			<p>About, alles over mij. Ni interresant maja :D</p>
+			<p>Naar de About pagina, waar je alles kunt lezen over mij. Wat ik graag doe, wat is lees, wat ik game en meer!</p>
 		</div>
 
 		<header>
-    	<h1>Blog - Rosiers Naomi</h1>
+    	<h1>Site - Rosiers Naomi</h1>
     	</header>
 
 		<div class="kader2">
 			<h3>Home</h3>
-			<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-			Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+			<p>Hier kan je van alles lezen over waar de site over gaat!<br>
+			Deze website gaat over Rosiers Naomi (ik dus) en hier op deze site kan je me contacteren on de link ‘Contact’ daar kan je eveneens ook alles vinden op welke sociale media ik actief ben.<br>
+			Onder de link ‘About’ kan je alles over me lezen wat ik interessant vind, wat mij hobby’s zijn en wat ik allemaal doe.<br>
+			Je kan hier ook bekijken waar ik allemaal met bezig ben onder de link ‘Portfolio’, daar zal ik dingen posten die ik heb gemaakt of waar ik aan bezig ben.<br>
+			</p>
 
-			<div class="vak1">
-				FOTO
-			</div>
-			<div class="vak2">
-				FOTO
-			</div>
-			<div class="vak3">
-				FOTO
-			</div>
-			<div class="vak4">
-				FOTO
-			</div>
-			<div class="vak5">
-				FOTO
-			</div>
-			<div class="vak6">
-				FOTO
-			</div>
-			<div class="vak7">
-				FOTO
-			</div>
-			<div class="vak8">
-				FOTO
-			</div>
-			<div class="vak9">
-				FOTO
-			</div>
-			<div class="vak10">
-				FOTO
-			</div>
+			<img src="Afbeeldingen/Doek1.JPG" class= "vak1">
+			<img src="Afbeeldingen/Doek2.JPG" class= "vak2">
+			<img src="Afbeeldingen/Doek3.JPG" class= "vak3">
+			<img src="Afbeeldingen/Kerstkaart2014.jpg" class= "vak4">
+			<img src="Afbeeldingen/ArceusLogo.png" class= "vak5">
+			<img src="Afbeeldingen/LogoBen.png" class= "vak6">
+			<img src="Afbeeldingen/LogosEVA1.png" class= "vak7">
+			<img src="Afbeeldingen/LogosEVA2.png" class= "vak8">
+			<img src="Afbeeldingen/LogosEVA3.png" class= "vak9">
+			<img src="Afbeeldingen/PixelPiraat.png" class= "vak10">
 
-			<p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-			Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+			<p>Ik maak veel Grafische dingen, op school, voor andere mensen en vooral in mijn vrije tijd.<br>
+			Ik heb veel schetsboeken thuis liggen waar ik in mijn schooltijd veel ingewerkt heb deze zijn meestal A4. Mijn andere schetsboeken waar ik vaak zelf in schets zijn over het algemeen altijd A5, die zijn handiger om mee te nemen en weg te steken.<br>
+			Ik werk vaak gewoon met een 3B Derwent Potlood in mijn schetsboek en een zachte gom maar ik durf ook wel vaak te tekenen met een vulpotlood met gewone HB vullingen deze hoef je niet te slijpen en zijn handiger om mee te nemen.<br><br>
+
+			Ook schilder ik wel eens. Soms op een grote katoenen doek die ik dan achteraf opspan op een zelf in elkaar getimmerde kader.<br>
+			Ik schilder dan op die doeken of op gewone canvassen met Acryllverf en met varkenshaar borstels zowel zachte als harde.<br>
+			Ik werk ook vaak met Aquarelle van Winsor Newton samen met kleurpotloden van Bruynseels om een mooi effect te krijgen.<br>
+			Vroeger werkte ik ook vaak met houtskool (en houtskoolpotloden) en met pastellen maar dat droogden mijn handen enorm uit dus gebruik ik het niet meer zo vaak.<br><br>
+
+			Ik heb een hekel aan het gebruik van Wasco’s en Ecoline verf. De Wasco’s zijn vettig en kan je moeilijk met kleuren terwijl de Ecoline enorm vast is en als je één pensteelstreek zet het voor altijd is ook al ga je erover.<br><br>
+
+			Veel plezier op mijn website!
+			</p>
 			</div>
 
 			<footer>
